# z-example

./: .gitignore  LICENSE  README.md  Z-Example.cabal  gettime-bench.hs  guess-std-type.hs  http-bench.hs  install.sh  json-bench.hs  wordcount.hs  z-example.cabal  z-examples.cabal
.github/workflows/: osxCI.yml  ubuntuCI.yml  winCI.yml
FileSystem/: SimpleFileSync.hs
FileSystem/config/: simple_file_sync.yaml
Network/LanguageServer/: client.hs  lsp-network-client.yaml  server.hs
examples/: SimpleFileSync.hs  http-bench.hs  wordcount.hs
