cabal-version: 2.2
name:          Z-Example
version:       0.1.0.0
synopsis:      Examples for Z toolkit.
description:
  Examples for Z toolkit, a simple and high performance IO toolkit for
  Haskell.

license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) Z.Haskell Contributors
author:        Z.Haskell Contributors
maintainer:    winterland1989@gmail.com
category:      Data
homepage:      https://github.com/ZHaskell/Z-Examples
bug-reports:   https://github.com/ZHaskell/Z-Examples/issues
build-type:    Simple

source-repository head
  type:     git
  location: git://github.com/ZHaskell/z-example.git

executable z-wc
  main-is:          wordcount.hs
  hs-source-dirs:   examples
  build-depends:
    , base    >=4.12.0.0 && <5
    , Z-Data  >=0.5
    , Z-IO    >=0.5

  default-language: Haskell2010

executable z-guess-std-type
  main-is:          guess-std-type.hs
  hs-source-dirs:   examples
  build-depends:
    , base    >=4.12.0.0 && <5
    , Z-Data  >=0.5
    , Z-IO    >=0.5

  default-language: Haskell2010

executable z-simple-file-sync
  main-is:          SimpleFileSync.hs
  hs-source-dirs:   FileSystem
  build-depends:
    , base             >=4.12.0.0 && <5
    , safe-exceptions  ^>=0.1
    , Z-Data           ^>=0.7
    , Z-IO             ^>=0.7
    , Z-YAML           ^>=0.3

  default-language: Haskell2010
  ghc-options:      -threaded -Wall -fno-warn-unused-do-bind

executable z-lsp-network-server
  main-is:          server.hs
  hs-source-dirs:   Network/LanguageServer
  build-depends:
    , base                  >=4.12.0.0 && <5
    , optparse-applicative  ^>=0.16
    , Z-Data                ^>=0.7
    , Z-IO                  ^>=0.7

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

executable z-lsp-network-client
  main-is:          client.hs
  hs-source-dirs:   Network/LanguageServer
  build-depends:
    , base                  >=4.12.0.0 && <5
    , optparse-applicative  ^>=0.16
    , Z-Data                ^>=0.7
    , Z-IO                  ^>=0.7
    , Z-YAML                ^>=0.3

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
