cabal-version:      2.4
name:               Z-Example
version:            0.1.0.0

maintainer:         winter

executable wc
    main-is:          wordcount.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
                    , Z-Data >= 0.3 
                    , Z-IO >= 0.3
    hs-source-dirs:   ./
    default-language: Haskell2010
    ghc-options:  -O2 

executable http-bench
    main-is:          http-bench.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
                    , Z-Data >= 0.3 
                    , Z-IO >= 0.3
    hs-source-dirs:   ./
    default-language: Haskell2010
    ghc-options:  -O2 -threaded -rtsopts -eventlog -with-rtsopts=-N

executable guess-std-type
    main-is:          guess-std-type.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
                    , Z-Data >= 0.3 
                    , Z-IO >= 0.3
    hs-source-dirs:   ./
    default-language: Haskell2010

executable json-bench
    main-is:          json-bench.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
                    , criterion 
                    , aeson
                    , bytestring
                    , Z-Data >= 0.3 
                    , Z-IO >= 0.3
    hs-source-dirs:   ./
    default-language: Haskell2010
    ghc-options:  -O2 

executable gettime-bench
    main-is:          gettime-bench.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
                    , criterion 
                    , time
                    , Z-IO >= 0.3
    hs-source-dirs:   ./
    default-language: Haskell2010
    ghc-options:  -O2 
